# projetGenieInfo_template

./: .gitignore  CMakeLists.txt  Readme.md  validconfig.sh
.github/: issues.json
.github/workflows/: classroom.yml  create-issues.yml  evaluation.yml
estia-image/: CMakeLists.txt  Readme.md  estia-image.pc.in
estia-image/src/: estia-image.c  estia-image.h
getopt/: CMakeLists.txt  Readme.md
result/0601-023609/: Readme.md  log_0601-023609.json
result/0603-151025/: Readme.md  log_0603-151025.json
result/0604-023114/: Readme.md
result/0606-234107/: Readme.md
result/0606-234512/: Readme.md
result/0606-234906/: Readme.md
result/0608-023921/: Readme.md  log_0608-023921.json
result/0609-023940/: Readme.md
result/0615-024434/: Readme.md  log_0615-024434.json
src/: argsparse.c  argsparse.h  configp.h  feature.c  feature.h  features.c  features.h  main.c  utils.c  utils.h
